--- a/src/NukeCommander/project.json
+++ b/src/NukeCommander/project.json
@@ -1,14 +1,16 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true
   },
 
   "dependencies": {
+    "CmdProcessor": "1.0.0-*",
     "Microsoft.NETCore.App": {
       "type": "platform",
-      "version": "1.0.1"
-    }
+      "version": "1.1.0"
+    },
+    "Newtonsoft.Json": "9.0.1"
   },
 
   "frameworks": {
